# movie-suggester

./: .gitignore  README.md  install-bun.sh  netlify.toml
backend/: .env.example  README.md  debug_stream.py  main.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  constants.py  imdb_service.py  language_manager.py  llm_agent.py  movie_data.py  poster_service.py  prompt_engine.py  search_agent.py  suggestion_engine.py
backend/tests/: __init__.py  test_acceptance_criteria.py  test_integration.py  test_main.py  test_suggestion_engine.py
frontend/: README.md  env.production.example  env.template  index.html  netlify-deployment-guide.md  package-lock.json  package.json  setup-env.sh  tsconfig.json  vite.config.ts
frontend/scripts/: deploy-checklist.sh
frontend/src/: globals.d.ts  main.tsx
frontend/src/components/: AnimatedCard.tsx  ApiDemo.tsx  ChatInterface.tsx  ContentTypeBadge.tsx  ErrorDisplay.tsx  GenreTag.tsx  IconShowcase.tsx  InputBox.tsx  LanguageSelector.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MovieCard.tsx  MovieMessageBubble.tsx  MoviePoster.tsx  PosterImage.tsx  RatingDisplay.tsx  TestButton.tsx  YearBadge.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/hooks/: useApi.ts  useChat.ts
frontend/src/pages/: ChatTestPage.tsx  TestPage.tsx
frontend/src/services/: movieService.ts
frontend/src/types/: api.ts  chat.ts  language.ts  movie.ts
frontend/src/utils/: apiClient.ts  config.ts  imageUtils.ts  messageUtils.ts  queryClient.ts
